<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/app_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/portfolio_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/PortfolioFont"
    />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_app1"
        android:id="@+id/button_spotify_streamer"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@color/button_primary"
        android:layout_marginBottom="10dp"
        android:onClick="spotifyStreamerOnClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_app2"
        android:id="@+id/button_scores_app"
        android:layout_below="@+id/button_spotify_streamer"
        android:layout_centerHorizontal="true"
        android:background="@color/button_primary"
        android:layout_marginBottom="10dp"
        android:onClick="scoresAppOnClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_app3"
        android:id="@+id/button_library_app"
        android:layout_below="@+id/button_scores_app"
        android:layout_centerHorizontal="true"
        android:background="@color/button_primary"
        android:layout_marginBottom="10dp"
        android:onClick="libraryAppOnClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_app4"
        android:id="@+id/button_built_it_bigger"
        android:layout_below="@+id/button_library_app"
        android:layout_centerHorizontal="true"
        android:background="@color/button_primary"
        android:layout_marginBottom="10dp"
        android:onClick="builtItBiggerOnClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_app5"
        android:id="@+id/xyz_reader"
        android:layout_below="@+id/button_built_it_bigger"
        android:layout_centerHorizontal="true"
        android:background="@color/button_primary"
        android:layout_marginBottom="10dp"
        android:onClick="xyzReaderOnClick"/>

    <Button
        android:layout_width="@dimen/button_width"

        android:layout_height="wrap_content"
        android:text="@string/btn_app6"
        android:id="@+id/button6"
        android:background="@color/button_secondary"
        android:layout_below="@+id/xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        android:onClick="capstoneOnClick"/>

</RelativeLayout>
